zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/direct_struct_loop.zig
const A = struct {
    a: A,
};
export fn entry() usize {
    return @sizeOf(A);
}

// error
//
// :2:8: error: type 'tmp.A' depends on itself for field declared here
